--- a/public/index.html
+++ b/public/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!-- <!doctype html>
 <html lang=en>
 <meta charset=utf-8>
 <meta http-equiv=x-ua-compatible content="ie=edge">
@@ -9070,4 +9070,4 @@
                     at 2023-07-04 13:55:22 by <a href=https://github.com/thedevsaddam/docgen target=_blank
                         class=text-muted>docgen</a></span></div>
         </div>
-    </footer>
+    </footer> -->
